--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -71,7 +71,7 @@
 
 a:hover {
   width: max-content;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #0184633c;
   transition: 1s ease-;
   &:hover{
@@ -83,6 +83,7 @@ a:hover {
 .frame-50 {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-evenly;
   position: relative;
 }
